<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="toast_message">This button will launch %1$s!</string>
    <string name="main_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>

    <string name="btn_SPOTIFY_STREAMER">SPOTIFY STREAMER</string>
    <string name="btn_SCORES_APP">SCORES APP</string>
    <string name="btn_LIBRARY_APP">LIBRARY APP</string>
    <string name="btn_BUILD_IT_BIGGER">BUILD IT BIGGER</string>
    <string name="btn_XYZ_READER">XYZ READER</string>
    <string name="btn_CAPSTONE_MY_OWN_APP">CAPSTONE: MY OWN APP</string>
</resources>
